syntax = "proto3";
// .proto files are used for the gRPC structure of the data and the services.
//  both sides agree on the data format...i think.

option java_package = "Server";


message Empty{} //For some reason the rpc service cant take 0 arguments to i pass it an empty message

message Ingredient {
  int32 id = 1;
  string name = 2;
  float cost = 3;
  int32 amount = 4;
  int32 daysUntilBad = 5;
  int32 amountStatus = 6;
  // 1 -> Everything is ok!
  // 2 -> Ingredient amount medium (yellow)
  // 3 -> Ingredient amount low (red)
  int32 expirationStatus = 7;
  // 1 -> Everything is ok!
  // 2 -> Ingredient about to go bad (yellow)
  // 3 -> Ingredient has went bad (red)
}

message AllIngredientResponse{ //Many 'Ingredient' messages | basically an array list?
  repeated Ingredient messages = 1;
}

message UpdateIngredientRequest{
  int32 id = 1;
  int32 difference = 2;
  int32 daysUntilBad = 3;
}

service IngredientService{
  rpc GetAllIngredients(Empty) returns (AllIngredientResponse);
  rpc UpdateIngredient(UpdateIngredientRequest) returns (Ingredient);
}

//service UserService {
//  rpc GetUser(UserIdRequest) returns (User); // Defines a gRPC service that is then compiled into the protobuf
//}